--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
 	<body>
 		<div id='container'>
 			<header>
-				<h1>ALÔ, ALÔ, MARCIANO...</h1>
+				<h3>Que Tal um Samba?<h3>
+				<navbar>
+					<ul>
+						<li><a href=''>Home</a></li>
+						<li><a href=''>Contato</a></li>
+						<li><a href=''>Produtos</a><li>
+					</ul>
+				<navbar>
 			</header>
 			<div class='principal'>
 				<br>
-				<h3 class='tnt'>TNT</h3>
-				<span class='counter'>07</span>
+				<div>
+					<h3 class='tnt'>TNT</h3>
+					<span class='counter'>07</span>
+				</div>
+				<!--
 				<a href='https://store.steampowered.com/?l=portuguese'>Clique aqui</a><br>
 				<a href='javascript:alert('Oi')>Oi</a><br>
 				<figure>
@@ -29,7 +39,27 @@
 						</small>
 					</figcaption>
 				</figure>
-			</div>
+				-->
+				<div id='formulario'>
+					<form action="">
+					  <label for="nome">Nome:</label><br>
+					  <input type="text" id="nome" name="nome" value=""><br>
+					  <label for="idade">Data de Nascimento:</label><br>
+					  <input type="date" id="idade" name="idade" value=""><br><br>
+					  <input type="submit" value="Enviar">
+					</form>
+				</div>
+				<div class='flex-cont'>
+					<div>
+						<img src='media/harry.jpg' width='200px' height='140px'>
+					</div>
+					<div>
+						<img src='media/harry.jpg' width='200px' height='140px'>
+					</div>
+					<div>
+						<img src='media/harry.jpg' width='200px' height='140px'>
+					</div>
+				</div>
 			<footer>
 				<h5>Todos os direitos reservados &copy;</h5>
 			</footer>
